[tool.poetry]
name = "laika-project-ai"
version = "0.1.0"
description = ""
authors = ["Bego"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
ollama = "^0.3.3"
mysql-connector-python = "^9.0.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

